# van3twin

./: .gitignore  Dockerfile  Dockerfile.van3twin  README.md  adapt_files.py  bridge.py  check_sionna.sh  entrypoint.sh  sandbox_builder.sh  switch_ms-van3t-CARLA.sh  thesis_methodology.md  thesis_network_layer.md  wrap_sionna.sh
.github/workflows/: build.yml
disabled-examples/: v2v-cam-exchange-sionna-80211p.cc  v2v-cam-exchange-sionna-ltev2x.cc  v2v-cam-exchange-sionna-nrv2x.cc  v2v-carlaMobility-80211p.cc  v2v-carlaMobility-nrv2x.cc
docker/: clean.sh  docker-compose.yml  ns3-wrapper
emulation-support/PCAP-AMQP-relayer/src/: sample_quad_final.cpp
emulation-support/UDP-AMQP-relayer/src/: sample_quad_final.cpp
src/: CMakeLists.txt
src/automotive/: CMakeLists.txt
src/automotive/examples/: CMakeLists.txt  old_version  v2i-areaSpeedAdvisor-80211p.cc  v2i-areaSpeedAdvisor-lte.cc  v2i-emergencyVehicleWarning-80211p.cc  v2i-trafficManager-80211p.cc  v2i-trafficManager-LTE.cc  v2p-vam-80211p.cc  v2v-80211p-gps-tc-dcc.cc  v2v-80211p-gps-tc-example.cc  v2v-cam-exchange-sionna-80211p.cc  v2v-coexistence-80211p-ltev2x.cc  v2v-coexistence-80211p-nrv2x.cc  v2v-congestion-80211p.cc  v2v-congestion-nrv2x.cc  v2v-emergencyVehicleAlert-80211p.cc  v2v-emergencyVehicleAlert-ltev2x.cc  v2v-emergencyVehicleAlert-nrv2x.cc  v2v-foresee-mcm-80211p.cc  v2v-simple-cam-exchange-80211p.cc  v2x-emulator.cc
src/gps-tc/model/: gps-tc.h
src/traci/: CMakeLists.txt
src/traci/model/: sionna-connection-handler.h  traci-client.cc  traci-client.h  v2x-gossip-app.cc  v2x-gossip-app.h
(+662 files in other folders)
